k8s/ServiceB.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-b
spec:
  selector:
    app: service-b
