k8s/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx-example
  rules:
    - http:
        paths:
          - path: /serviceA
            pathType: Prefix
            backend:
              service:
                name: service-a
          - path: /serviceB
            pathType: Prefix
            backend:
              service:
                name: service-b
